--- a/ui/webui/resources/css/md_colors.css
+++ b/ui/webui/resources/css/md_colors.css
@@ -1,5 +1,6 @@
 html {
-  --brave-toolbar-gradient: linear-gradient(90deg, #50C276 0%, #27a348 100%); /* linear gradient */
+  /* to change color */
+  --brave-toolbar-gradient: linear-gradient(90deg, rgba(43, 161, 108, 1) 0%, rgba(14, 77, 135, 1) 100%); /* linear gradient */
   --md-background-color: rgb(233, 236, 239); /* neutral200 */
   --md-loading-message-color: #5E6175; /* grey700 */
   --md-toolbar-color: rgb(200, 44, 109); /* not design system color. middle value of toolbar's linear gradient. */
